--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
     <title>Title</title>
     <link
       rel="stylesheet"
-      href="./src/styles/main.scss"
+      href="./styles/main.scss"
     />
   </head>
-  <div
+  <body>
+      <div
     id="mobile-menu"
     class="mobile-modal"
   >
@@ -35,7 +36,6 @@
       </a>
     </div>
   </div>
-  <body>
     <header class="header">
       <nav class="navbar">
         <div class="nav_baker"><div class="baker_lab"></div></div>
@@ -156,7 +156,7 @@
         </div>
       </div>
     </div>
-    <script src="./src/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
   <footer class="footer">
     <div class="bakerlab">
