--- a/index.html
+++ b/index.html
@@ -6,45 +6,55 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab - Creative Bakery</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./src/styles/main.scss"
     />
   </head>
   <body>
-      <div
-    id="mobile-menu"
-    class="mobile-modal"
-  >
-    <div class="mobile-modal-content">
-      <a
-        href="#"
-        class="mobile-close"
-      >
-        x
-      </a>
-      <h3 class="baker_logo_modal"></h3>
-      <a href="#">Products</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a
-        class="button_contact_modal"
-        href="#contact_us_footer"
-      >
-        Contact Us
-      </a>
+    <!-- MODAL MOBILE -->
+    <div
+      id="mobile-menu"
+      class="mobile-modal"
+    >
+      <div class="mobile-modal-content">
+        <a
+          href="#"
+          class="mobile-close"
+        >
+          x
+        </a>
+        <h3 class="baker_logo_modal"></h3>
+        <a href="#">Products</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a
+          class="button_contact_modal"
+          href="#contact_us_footer"
+        >
+          Contact Us
+        </a>
+      </div>
     </div>
-  </div>
-    <header class="header">
+
+    <!-- HEADER -->
+    <header>
       <nav class="navbar">
-        <div class="nav_baker"><div class="baker_lab"></div></div>
+        <div class="nav_baker">
+          <div class="baker_lab"></div>
+        </div>
         <div class="nav_search">
           <div class="products">Products</div>
           <div class="about_us">About Us</div>
           <div class="blog">Blog</div>
           <div class="contact_nav">
-            <button class="contact_us">Contact Us</button>
+            <a
+              href="#contact_us_footer"
+              class="contact_us"
+            >
+              Contact Us
+            </a>
             <a
               href="#mobile-menu"
               class="menu-trigger"
@@ -52,63 +62,67 @@
           </div>
         </div>
       </nav>
+
       <div class="container_hero">
-        <div class="container_text_main">
-          <div class="text_main">
-            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
-          </div>
-          <div class="cookie_image"></div>
+        <div class="text_main">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
         </div>
         <div class="creative_bakery">Creative bakery</div>
         <button class="learn_more_button">Learn more</button>
+        <div class="cookie_image"></div>
       </div>
     </header>
-    <div class="first_products_row">
+
+    <!-- PRODUTOS -->
+    <section class="first_products_row">
       <div class="titles">
-        <div class="title_product_main">What we bake</div>
-        <div class="subtitle_product">
+        <h2 class="title_product_main">What we bake</h2>
+        <p class="subtitle_product">
           We can customize our cookies right for your needs. Just imagine it
-        </div>
+        </p>
       </div>
+
       <div class="product_images-1">
         <div class="product-1">
           <div class="title_product">Cakes</div>
-          <div class="description_products-1">
+          <p class="description_products-1">
             Oatmeal cookies with golden raisins, orange zest and chocolate chips
-          </div>
+          </p>
           <button class="order_button">Order</button>
         </div>
         <div class="product-2">
           <div class="title_product">Cakes</div>
-          <div class="description_products-1">
+          <p class="description_products-1">
             Chocolate biscuit coffee cake topped with a buttercream and powder
-          </div>
+          </p>
           <button class="order_button">Order</button>
         </div>
       </div>
+
       <div class="product_images-2">
         <div class="product-3">
           <div class="title_product">Donuts</div>
-          <div class="description_products-1">
+          <p class="description_products-1">
             Light multi-layered croissant strewn with cinammon and almond
             “petals”
-          </div>
+          </p>
           <button class="order_button">Order</button>
         </div>
         <div class="product-4">
           <div class="title_product">Donuts</div>
-          <div class="description_products-1">
+          <p class="description_products-1">
             Light multi-layered croissant strewn with coconut and nuts
-          </div>
+          </p>
           <button class="order_button">Order</button>
         </div>
       </div>
+
       <div class="product_images-3">
         <div class="product-5">
           <div class="title_product_cakes">Cakes</div>
-          <div class="description_products-cake">
+          <p class="description_products-cake">
             Chocolate salted caramel, Vanilla frutti pebbles
-          </div>
+          </p>
           <button class="order_button">Order</button>
         </div>
         <div class="product-6">
@@ -118,25 +132,28 @@
           >
             Cookies
           </div>
-          <div class="description_products-1">
+          <p class="description_products-1">
             Oatmeal cookies with golden raisins, orange zest and chocolate chips
-          </div>
+          </p>
           <button class="order_button">Order</button>
         </div>
       </div>
-    </div>
-    <div class="information_about_us">
+    </section>
+
+    <!-- SOBRE NÓS -->
+    <section class="information_about_us">
       <div class="about">
-        <div class="few_words">Few words About us</div>
-        <div class="words">
+        <h2 class="few_words">Few words About us</h2>
+        <p class="words">
           Like many design teams, Onfido made the transition from Abstract +
           Sketch, to Figma in the last couple of years. One of the common
           resistance points internally before making that switch, was Figma’s
           lack of Git-style branching that Abstract enabled. The design team had
           come to rely on branching and had built a lot of our processes around
           it.
-        </div>
+        </p>
       </div>
+
       <div class="stats">
         <div class="year">
           2015
@@ -155,45 +172,47 @@
           <div class="stats_description">Clients</div>
         </div>
       </div>
-    </div>
-    <script src="./scripts/main.js"></script>
-  </body>
-  <footer class="footer">
-    <div class="bakerlab">
-      <div class="bakerlab_logo"></div>
-      <div class="menu_items">
-        <div class="menu">Menu</div>
-        <div class="menu-item">Products</div>
-        <div class="menu-item">About Us</div>
-        <div class="menu-item">Blog</div>
-        <div class="menu-item">Terms & Privacy</div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="bakerlab">
+        <div class="bakerlab_logo"></div>
+        <div class="menu_items">
+          <div class="menu">Menu</div>
+          <div class="menu-item">Products</div>
+          <div class="menu-item">About Us</div>
+          <div class="menu-item">Blog</div>
+          <div class="menu-item">Terms & Privacy</div>
+        </div>
+        <div class="social_buttons">
+          <div class="facebook"></div>
+          <div class="instagram"></div>
+          <div class="X"></div>
+        </div>
       </div>
-      <div class="social_buttons">
-        <div class="facebook"></div>
-        <div class="instagram"></div>
-        <div class="X"></div>
-      </div>
-    </div>
-    <div
-      class="contact_us_footer"
-      id="contact_us_footer"
-    >
-      Contact us
-      <div class="informations">
-        <div class="call_us">
-          Call us
-          <div class="phone">
-            <div>(629) 555-0129</div>
-            <div>(603) 555-0123</div>
-            <div>(704) 555-0127</div>
+
+      <div
+        class="contact_us_footer"
+        id="contact_us_footer"
+      >
+        Contact us
+        <div class="informations">
+          <div class="call_us">
+            Call us
+            <div class="phone">
+              <div>(629) 555-0129</div>
+              <div>(603) 555-0123</div>
+              <div>(704) 555-0127</div>
+            </div>
+          </div>
+          <div class="email_us">
+            Email us
+            <div class="email">bakerlab@example.com</div>
           </div>
         </div>
-        <div class="email_us">
-          Email us
-          <div class="email">bakerlab@example.com</div>
-        </div>
+        <div class="copyright">© Bakerlab 2022</div>
       </div>
-      <div class="copyright">© Bakerlab 2022</div>
-    </div>
-  </footer>
+    </footer>
+  </body>
 </html>
