--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Bakerlab - Creative Bakery</title>
     <link
       rel="stylesheet"
-      href="./src/styles/main.scss"
+      href="./styles/main.scss"
     />
   </head>
   <body>
