--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <title>Bakerlab - Creative Bakery</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./src/styles/main.scss"
     />
+    <link rel="icon" type="image/png"
+    href="./src/images/cookie_background.png" />
+
   </head>
   <body>
     <!-- MODAL MOBILE -->
@@ -39,11 +42,12 @@
     </div>
 
     <!-- HEADER -->
-    <header>
+    <header class="header">
       <nav class="navbar">
         <div class="nav_baker">
-          <div class="baker_lab"></div>
+          <a href="/" class="baker_lab"></a>
         </div>
+
         <div class="nav_search">
           <div class="products">Products</div>
           <div class="about_us">About Us</div>
