--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
       </div>
 
       <div class="product_images-1">
-        <div class="product-1">
+        <div class="product-base product-1">
           <div class="title_product">Cakes</div>
           <p class="description_products-1">
             Oatmeal cookies with golden raisins, orange zest and chocolate chips
           </p>
           <button class="order_button">Order</button>
         </div>
-        <div class="product-2">
+        <div class="product-base product-2">
           <div class="title_product">Cakes</div>
           <p class="description_products-1">
             Chocolate biscuit coffee cake topped with a buttercream and powder
@@ -104,7 +104,7 @@
       </div>
 
       <div class="product_images-2">
-        <div class="product-3">
+        <div class="product-base product-3">
           <div class="title_product">Donuts</div>
           <p class="description_products-1">
             Light multi-layered croissant strewn with cinammon and almond
@@ -112,7 +112,7 @@
           </p>
           <button class="order_button">Order</button>
         </div>
-        <div class="product-4">
+        <div class="product-base product-4">
           <div class="title_product">Donuts</div>
           <p class="description_products-1">
             Light multi-layered croissant strewn with coconut and nuts
@@ -122,14 +122,14 @@
       </div>
 
       <div class="product_images-3">
-        <div class="product-5">
+        <div class="product-base product-5">
           <div class="title_product_cakes">Cakes</div>
           <p class="description_products-cake">
             Chocolate salted caramel, Vanilla frutti pebbles
           </p>
           <button class="order_button">Order</button>
         </div>
-        <div class="product-6">
+        <div class="product-base product-6">
           <div
             class="title_product"
             id="title_product-cookies"
