--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,519 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
+  <!-- #region head -->
+
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="icon"
+      href="./images/header-cookie-img.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+
+  <!-- #endregion -->
+  <body class="page">
+    <!-- #region header -->
+
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="./images/bakerlab-logo.png"
+            alt="Bakerlab logo"
+            class="top-bar__logo"
+          />
+        </a>
+
+        <nav class="top-bar__nav">
+          <a
+            href="#products"
+            class="top-bar__link"
+          >
+            Products
+          </a>
+
+          <a
+            href="#about-us"
+            class="top-bar__link"
+          >
+            About Us
+          </a>
+
+          <a
+            href="#contacts"
+            class="top-bar__link"
+          >
+            Blog
+          </a>
+
+          <div class="top-bar__wrapper-for-contacts">
+            <a href="tel:+(629) 555-0129">
+              <span class="icon icon--phone"></span>
+            </a>
+
+            <a
+              href="#contacts"
+              class="top-bar__link top-bar__link--contacts"
+            >
+              Contact us
+            </a>
+          </div>
+        </nav>
+
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+      </div>
+
+      <div class="container header__content">
+        <p class="header__description">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <h1 class="header__title">Creative bakery</h1>
+
+        <img
+          src="./images/header-cookie-img.png"
+          alt="photo of cookie"
+          class="header__photo"
+        />
+
+        <a
+          href="#about-us"
+          class="header__button"
+        >
+          <span class="icon icon--cookie"></span>
+          <span class="header__button-text">Learn more</span>
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="top-bar menu__top">
+          <a
+            href="#"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="./images/bakerlab-logo.png"
+              alt="Bakerlab logo"
+              class="top-bar__logo"
+            />
+          </a>
+
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+
+        <div class="menu__list">
+          <a
+            href="#products"
+            class="menu__link"
+          >
+            Products
+          </a>
+
+          <a
+            href="#about-us"
+            class="menu__link"
+          >
+            About Us
+          </a>
+
+          <a
+            href="#contacts"
+            class="menu__link"
+          >
+            Blog
+          </a>
+
+          <div class="menu__wrapper-for-contacts">
+            <a
+              href="tel:+(629) 555-0129"
+              class="menu__contacts"
+            >
+              <span class="icon icon--phone"></span>
+            </a>
+
+            <a
+              href="#contacts"
+              class="menu__link menu__link--contacts"
+            >
+              Contact us
+            </a>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <!-- #endregion -->
+    <!-- #region main -->
+
+    <main class="main">
+      <div class="container">
+        <section
+          class="products"
+          id="products"
+        >
+          <h2 class="section-heading products__title">What we bake</h2>
+          <p class="products__title-description">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+
+          <div class="products__items">
+            <article class="products__item">
+              <div class="products__wrapper-photo">
+                <img
+                  src="./images/categories/products-cakes.png"
+                  alt="photo of cakes"
+                  class="products__photo"
+                />
+              </div>
+
+              <p class="products__name">Cakes</p>
+              <p class="products__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                class="products__to-order"
+                href="#contacts"
+              >
+                <span class="icon icon--buy"></span>
+                <span class="products__order-sign">Order</span>
+              </a>
+            </article>
+
+            <article class="products__item">
+              <div class="products__wrapper-photo">
+                <img
+                  src="./images/categories/products-cakes-2.png"
+                  alt="photo of cakes"
+                  class="products__photo"
+                />
+              </div>
+
+              <p class="products__name">Cakes</p>
+              <p class="products__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+
+              <a
+                class="products__to-order"
+                href="#contacts"
+              >
+                <span class="icon icon--buy"></span>
+                <span class="products__order-sign">Order</span>
+              </a>
+            </article>
+
+            <article
+              class="products__item products__item--align-right-desktop-1"
+            >
+              <div class="products__wrapper-photo">
+                <img
+                  src="./images/categories/products-donuts.png"
+                  alt="photo of cakes"
+                  class="products__photo"
+                />
+              </div>
+
+              <p class="products__name">Donuts</p>
+              <p class="products__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+
+              <a
+                class="products__to-order"
+                href="#contacts"
+              >
+                <span class="icon icon--buy"></span>
+                <span class="products__order-sign">Order</span>
+              </a>
+            </article>
+
+            <article
+              class="products__item products__item--align-right-desktop-2"
+            >
+              <div class="products__wrapper-photo">
+                <img
+                  src="./images/categories/products-donuts-2.png"
+                  alt="photo of cakes"
+                  class="products__photo"
+                />
+              </div>
+
+              <p class="products__name">Donuts</p>
+              <p class="products__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+
+              <a
+                class="products__to-order"
+                href="#contacts"
+              >
+                <span class="icon icon--buy"></span>
+                <span class="products__order-sign">Order</span>
+              </a>
+            </article>
+
+            <article class="products__item">
+              <div class="products__wrapper-photo">
+                <img
+                  src="./images/categories/products-cakes-3.png"
+                  alt="photo of cakes"
+                  class="products__photo"
+                />
+              </div>
+
+              <p class="products__name">Cakes</p>
+              <p class="products__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+
+              <a
+                class="products__to-order"
+                href="#contacts"
+              >
+                <span class="icon icon--buy"></span>
+                <span class="products__order-sign">Order</span>
+              </a>
+            </article>
+
+            <article class="products__item">
+              <div class="products__wrapper-photo">
+                <img
+                  src="./images/categories/products-cookies.png"
+                  alt="photo of cakes"
+                  class="products__photo"
+                />
+              </div>
+
+              <p class="products__name">Cookies</p>
+              <p class="products__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                class="products__to-order"
+                href="#contacts"
+              >
+                <span class="icon icon--buy"></span>
+                <span class="products__order-sign">Order</span>
+              </a>
+            </article>
+          </div>
+        </section>
+
+        <section
+          class="about-us"
+          id="about-us"
+        >
+          <h2 class="section-heading about-us__title">Few words About us</h2>
+          <p class="about-us__title-description">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+
+          <div class="about-us__number">
+            <p class="about-us__number-text">2015</p>
+            <p class="about-us__number-name">Foundation year</p>
+          </div>
+
+          <div class="about-us__number">
+            <p class="about-us__number-text">23</p>
+            <p class="about-us__number-name">Stores</p>
+          </div>
+
+          <div class="about-us__number">
+            <p class="about-us__number-text">155</p>
+            <p class="about-us__number-name">Companies</p>
+          </div>
+
+          <div class="about-us__number">
+            <p class="about-us__number-text">10K+</p>
+            <p class="about-us__number-name">Clients</p>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <!-- #endregion -->
+    <!-- #region footer -->
+
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="container footer__wrapper">
+        <a
+          href="#"
+          class="footer__logo-link"
+        >
+          <img
+            src="./images/bakerlab-logo-footer.png"
+            alt="Bakerlab logo"
+            class="footer__logo"
+          />
+        </a>
+
+        <ul class="footer__list footer__menu-list">
+          <li class="footer__list-name">Menu</li>
+
+          <li class="footer__list-item">
+            <a
+              href="#products"
+              class="footer__link"
+            >
+              Products
+            </a>
+          </li>
+
+          <li class="footer__list-item">
+            <a
+              href="#about-us"
+              class="footer__link"
+            >
+              About Us
+            </a>
+          </li>
+
+          <li class="footer__list-item">
+            <a
+              href="#contacts"
+              class="footer__link"
+            >
+              Blog
+            </a>
+          </li>
+
+          <li class="footer__list-item">
+            <a
+              href="#"
+              class="footer__link"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+
+        <h2 class="section-heading footer__title">Contact us</h2>
+
+        <ul class="footer__list footer__contacts-list">
+          <li class="footer__list-name">Call us</li>
+
+          <li class="footer__list-item">
+            <a
+              href="tel:+(629) 555-0129"
+              class="footer__link"
+            >
+              (629) 555-0129
+            </a>
+          </li>
+
+          <li class="footer__list-item">
+            <a
+              href="tel:+(603) 555-0123"
+              class="footer__link"
+            >
+              (603) 555-0123
+            </a>
+          </li>
+
+          <li class="footer__list-item">
+            <a
+              href="tel:+(704) 555-0127"
+              class="footer__link"
+            >
+              (704) 555-0127
+            </a>
+          </li>
+        </ul>
+
+        <ul class="footer__list footer__emails-list">
+          <li class="footer__list-name">Email us</li>
+
+          <li class="footer__list-item">
+            <a
+              href="mailto:bakerlab@example.com"
+              class="footer__link"
+            >
+              bakerlab@example.com
+            </a>
+          </li>
+        </ul>
+
+        <div class="footer__blog">
+          <a
+            href="https://www.facebook.com"
+            class="icon icon--facebook"
+            target="_blank"
+          ></a>
+
+          <a
+            href="https://www.instagram.com"
+            class="icon icon--instagram"
+            target="_blank"
+          ></a>
+
+          <a
+            href="https://www.x.com"
+            class="icon icon--twitter"
+            target="_blank"
+          ></a>
+        </div>
+
+        <p class="footer__copyright">© Bakerlab 2022</p>
+      </div>
+    </footer>
+    <!-- #endregion -->
   </body>
 </html>
