--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,9 +11,11 @@
       rel="stylesheet"
       href="./src/styles/main.scss"
     />
-    <link rel="icon" type="image/png"
-    href="./src/images/cookie_background.png" />
-
+    <link
+      rel="icon"
+      type="image/png"
+      href="./src/images/cookie_background.png"
+    />
   </head>
   <body>
     <!-- MODAL MOBILE -->
@@ -45,7 +47,10 @@
     <header class="header">
       <nav class="navbar">
         <div class="nav_baker">
-          <a href="/" class="baker_lab"></a>
+          <a
+            href="/"
+            class="baker_lab"
+          ></a>
         </div>
 
         <div class="nav_search">
@@ -86,8 +91,14 @@
         </p>
       </div>
 
+      <!-- LINHA 1 -->
       <div class="product_images-1">
         <div class="product-base product-1">
+          <img
+            src="./src/images/product_1_desktop.png"
+            alt="Product_1"
+            class="product_img"
+          />
           <div class="title_product">Cakes</div>
           <p class="description_products-1">
             Oatmeal cookies with golden raisins, orange zest and chocolate chips
@@ -95,6 +106,11 @@
           <button class="order_button">Order</button>
         </div>
         <div class="product-base product-2">
+          <img
+            src="./src/images/product_2_desktop.png"
+            alt="Product_2"
+            class="product_img"
+          />
           <div class="title_product">Cakes</div>
           <p class="description_products-1">
             Chocolate biscuit coffee cake topped with a buttercream and powder
@@ -103,8 +119,14 @@
         </div>
       </div>
 
+      <!-- LINHA 2 -->
       <div class="product_images-2">
         <div class="product-base product-3">
+          <img
+            src="./src/images/product_3_desktop.png"
+            alt="Product_3"
+            class="product_img"
+          />
           <div class="title_product">Donuts</div>
           <p class="description_products-1">
             Light multi-layered croissant strewn with cinammon and almond
@@ -113,6 +135,11 @@
           <button class="order_button">Order</button>
         </div>
         <div class="product-base product-4">
+          <img
+            src="./src/images/product_4_desktop.png"
+            alt="Product_4"
+            class="product_img"
+          />
           <div class="title_product">Donuts</div>
           <p class="description_products-1">
             Light multi-layered croissant strewn with coconut and nuts
@@ -121,8 +148,14 @@
         </div>
       </div>
 
+      <!-- LINHA 3 -->
       <div class="product_images-3">
         <div class="product-base product-5">
+          <img
+            src="./src/images/product_5_desktop.png"
+            alt="Product_5"
+            class="product_img"
+          />
           <div class="title_product_cakes">Cakes</div>
           <p class="description_products-cake">
             Chocolate salted caramel, Vanilla frutti pebbles
@@ -130,6 +163,11 @@
           <button class="order_button">Order</button>
         </div>
         <div class="product-base product-6">
+          <img
+            src="./src/images/product_6_desktop.png"
+            alt="Product_6"
+            class="product_img"
+          />
           <div
             class="title_product"
             id="title_product-cookies"
