--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,468 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top">
+        <a
+          href="#"
+          class="header__logo-link"
+        >
+          <img
+            src="./images/Bakerlab-logo.png"
+            alt="Bakerlab logo"
+            class="header__logo-img"
+          />
+        </a>
+
+        <nav class="header__nav header__big-devices">
+          <ul class="header__list">
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__link body-text"
+              >
+                Products
+              </a>
+            </li>
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__link body-text"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__link body-text"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__phone-link uppercase"
+              >
+                <div class="icon icon--phone"></div>
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <a
+          href="#menu"
+          class="icon icon--menu header__small-devices"
+        ></a>
+      </div>
+      <aside
+        class="header__menu header__small-devices"
+        id="menu"
+      >
+        <div class="header__menu-top">
+          <a
+            href="#"
+            class="header__logo-link"
+          >
+            <img
+              src="./images/Bakerlab-logo.png"
+              alt="Bakerlab logo"
+              class="header__logo-img"
+            />
+          </a>
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+        <nav class="header__nav">
+          <ul class="header__list">
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__link body-text"
+              >
+                Products
+              </a>
+            </li>
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__link body-text"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__link body-text"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="header__list-item">
+              <a
+                href="#"
+                class="header__phone-link uppercase"
+              >
+                <div class="icon icon--phone"></div>
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+
+      <div class="header__content">
+        <div class="header__content-text body-text">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </div>
+        <h1 class="header__content-title">Creative bakery</h1>
+        <img
+          src="./images/Cookie.png"
+          alt="Cookie bg"
+          class="header__content-cookie"
+        />
+        <a
+          href="#"
+          class="header__content-button"
+        >
+          <div class="icon icon--cookie"></div>
+          <div class="header__content-button-text uppercase">learn more</div>
+        </a>
+      </div>
+    </header>
+
+    <main class="page__main">
+      <section class="what-we-bake">
+        <h2 class="what-we-bake__title">What we bake</h2>
+        <div class="what-we-bake__subtitle body-text">
+          We can customize our cookies right for your needs. Just imagine it
+        </div>
+
+        <div class="what-we-bake__content">
+          <div class="what-we-bake__card">
+            <div class="what-we-bake__card-img-wrapper">
+              <img
+                src="./images/photo-product-01.png"
+                alt="Product card"
+                class="what-we-bake__card-img"
+              />
+            </div>
+            <div class="what-we-bake__card-title uppercase">cakes</div>
+            <div class="what-we-bake__card-text body-text">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </div>
+            <a
+              href="#"
+              class="what-we-bake__card-link"
+            >
+              <div class="icon icon--arrow"></div>
+              <div class="what-we-bake__card-link-text uppercase">order</div>
+            </a>
+          </div>
+
+          <div class="what-we-bake__card">
+            <div class="what-we-bake__card-img-wrapper">
+              <img
+                src="./images/photo-product-06.png"
+                alt="Product card"
+                class="what-we-bake__card-img"
+              />
+            </div>
+            <div class="what-we-bake__card-title uppercase">cakes</div>
+            <div class="what-we-bake__card-text body-text">
+              Chocolate biscuit coffee cake topped with a buttercream and powder
+            </div>
+            <a
+              href="#"
+              class="what-we-bake__card-link"
+            >
+              <div class="icon icon--arrow"></div>
+              <div class="what-we-bake__card-link-text uppercase">order</div>
+            </a>
+          </div>
+
+          <div class="what-we-bake__blank"></div>
+          <div class="what-we-bake__blank"></div>
+
+          <div class="what-we-bake__card">
+            <div class="what-we-bake__card-img-wrapper">
+              <img
+                src="./images/photo-product-05.png"
+                alt="Product card"
+                class="what-we-bake__card-img"
+              />
+            </div>
+            <div class="what-we-bake__card-title uppercase">donuts</div>
+            <div class="what-we-bake__card-text body-text">
+              Light multi-layered croissant strewn with cinammon and almond
+              “petals”
+            </div>
+            <a
+              href="#"
+              class="what-we-bake__card-link"
+            >
+              <div class="icon icon--arrow"></div>
+              <div class="what-we-bake__card-link-text uppercase">order</div>
+            </a>
+          </div>
+
+          <div class="what-we-bake__card">
+            <div class="what-we-bake__card-img-wrapper">
+              <img
+                src="./images/photo-product-04.png"
+                alt="Product card"
+                class="what-we-bake__card-img"
+              />
+            </div>
+            <div class="what-we-bake__card-title uppercase">donuts</div>
+            <div class="what-we-bake__card-text body-text">
+              Light multi-layered croissant strewn with coconut and nuts
+            </div>
+            <a
+              href="#"
+              class="what-we-bake__card-link"
+            >
+              <div class="icon icon--arrow"></div>
+              <div class="what-we-bake__card-link-text uppercase">order</div>
+            </a>
+          </div>
+
+          <div class="what-we-bake__card">
+            <div class="what-we-bake__card-img-wrapper">
+              <img
+                src="./images/photo-product-03.png"
+                alt="Product card"
+                class="what-we-bake__card-img"
+              />
+            </div>
+            <div class="what-we-bake__card-title uppercase">cackes</div>
+            <div class="what-we-bake__card-text body-text">
+              Cake with chocolate salted caramel, Vanilla frutti pebbles inside
+            </div>
+            <a
+              href="#"
+              class="what-we-bake__card-link"
+            >
+              <div class="icon icon--arrow"></div>
+              <div class="what-we-bake__card-link-text uppercase">order</div>
+            </a>
+          </div>
+
+          <div class="what-we-bake__card">
+            <div class="what-we-bake__card-img-wrapper">
+              <img
+                src="./images/photo-product-02.png"
+                alt="Product card"
+                class="what-we-bake__card-img"
+              />
+            </div>
+            <div class="what-we-bake__card-title uppercase">cackes</div>
+            <div class="what-we-bake__card-text body-text">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </div>
+            <a
+              href="#"
+              class="what-we-bake__card-link"
+            >
+              <div class="icon icon--arrow"></div>
+              <div class="what-we-bake__card-link-text uppercase">order</div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="about-us">
+        <h2 class="about-us__title">Few words About us</h2>
+        <div class="about-us__description body-text">
+          Like many design teams, Onfido made the transition from Abstract +
+          Sketch, to Figma in the last couple of years. One of the common
+          resistance points internally before making that switch, was Figma’s
+          lack of Git-style branching that Abstract enabled. The design team had
+          come to rely on branching and had built a lot of our processes around
+          it.
+        </div>
+        <ul class="about-us__list">
+          <li class="about-us__list-item">
+            <div class="about-us__list-item-title big-text">2015</div>
+            <div class="about-us__list-item-text body-text">
+              Foundation year
+            </div>
+          </li>
+          <li class="about-us__list-item">
+            <div class="about-us__list-item-title big-text">23</div>
+            <div class="about-us__list-item-text body-text">Stores</div>
+          </li>
+          <li class="about-us__list-item">
+            <div class="about-us__list-item-title big-text">155</div>
+            <div class="about-us__list-item-text body-text">Companies</div>
+          </li>
+          <li class="about-us__list-item">
+            <div class="about-us__list-item-title big-text">10K+</div>
+            <div class="about-us__list-item-text body-text">Clients</div>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__socials">
+          <a
+            href="#header"
+            class="footer__logo"
+          >
+            <img
+              src="./images/Bakerlab-logo-white.png"
+              alt="Bakerfab Logo"
+              class="footer__logo-img"
+            />
+          </a>
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <div class="footer__list-title uppercase">menu</div>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="#"
+                class="footer__list-link"
+              >
+                Products
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="#"
+                class="footer__list-link"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="#"
+                class="footer__list-link"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="#"
+                class="footer__list-link"
+              >
+                Terms & Privacy
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__contacts">
+          <h2 class="footer__contacts-title">Contact us</h2>
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <div class="footer__list-title uppercase">call us</div>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="tel:(629) 555-0129"
+                class="footer__list-link"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="tel:(603) 555-0123"
+                class="footer__list-link"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a
+                href="tel:(704) 555-0127"
+                class="footer__list-link"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <div class="footer__list-title uppercase">email us</div>
+            </li>
+            <li class="footer__list-item">
+              <div class="footer__list-link">bakerlab@example.com</div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__icons-list">
+          <ul class="footer__socials-list">
+            <li class="footer__socials-list-item">
+              <a
+                href="#"
+                class="footer__socials-list-icon"
+              >
+                <div class="icon icon--instagram"></div>
+              </a>
+            </li>
+            <li class="footer__socials-list-item">
+              <a
+                href="#"
+                class="footer__socials-list-icon"
+              >
+                <div class="icon icon--facebook"></div>
+              </a>
+            </li>
+            <li class="footer__socials-list-item">
+              <a
+                href="#"
+                class="footer__socials-list-icon"
+              >
+                <div class="icon icon--twitter"></div>
+              </a>
+            </li>
+          </ul>
+          <div class="footer__copyright body-text">© Bakerlab 2022</div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
