--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           <ul class="header__list">
             <li class="header__list-item">
               <a
-                href="#"
+                href="#what-we-bake"
                 class="header__link body-text"
               >
                 Products
@@ -53,7 +53,7 @@
             </li>
             <li class="header__list-item">
               <a
-                href="#"
+                href="#about-us"
                 class="header__link body-text"
               >
                 About Us
@@ -69,7 +69,7 @@
             </li>
             <li class="header__list-item">
               <a
-                href="#"
+                href="#contact-us"
                 class="header__phone-link uppercase"
               >
                 <div class="icon icon--phone"></div>
@@ -164,7 +164,7 @@
     </header>
 
     <main class="page__main">
-      <section class="what-we-bake">
+      <section class="what-we-bake" id="what-we-bake">
         <h2 class="what-we-bake__title">What we bake</h2>
         <div class="what-we-bake__subtitle body-text">
           We can customize our cookies right for your needs. Just imagine it
@@ -305,7 +305,7 @@
         </div>
       </section>
 
-      <section class="about-us">
+      <section class="about-us" id="about-us">
         <h2 class="about-us__title">Few words About us</h2>
         <div class="about-us__description body-text">
           Like many design teams, Onfido made the transition from Abstract +
@@ -357,7 +357,7 @@
             </li>
             <li class="footer__list-item">
               <a
-                href="#"
+                href="#what-we-bake"
                 class="footer__list-link"
               >
                 Products
@@ -365,7 +365,7 @@
             </li>
             <li class="footer__list-item">
               <a
-                href="#"
+                href="#about-us"
                 class="footer__list-link"
               >
                 About Us
@@ -390,7 +390,7 @@
           </ul>
         </div>
 
-        <div class="footer__contacts">
+        <div class="footer__contacts" id="contact-us">
           <h2 class="footer__contacts-title">Contact us</h2>
           <ul class="footer__list">
             <li class="footer__list-item">
@@ -427,7 +427,7 @@
               <div class="footer__list-title uppercase">email us</div>
             </li>
             <li class="footer__list-item">
-              <div class="footer__list-link">bakerlab@example.com</div>
+              <a href="mailto:bakerlab@example.com" class="footer__list-link">bakerlab@example.com</a>
             </li>
           </ul>
         </div>
